# shrike-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.helix/: languages.toml
shrike-core/: Cargo.toml
shrike-core/src/: async_universal.rs  lib.rs
shrike-esp/: Cargo.toml
shrike-esp/src/: esp.rs  lib.rs
shrike-rp/: Cargo.toml
shrike-rp/src/: rp2040.rs  rp235x.rs
src/: async_universal.rs  error.rs  lib.rs  rp2040.rs  rp235x.rs  universal.rs
