[package]
name = "shrike-rs"
version = "0.1.0"
edition = "2024"


[dependencies]
embedded-hal = "1.0.*"
embedded-hal-async = "1.0.*"
embassy-executor = { version = "0.10.*", optional = true }
embassy-rp = { version = "0.10.*", optional = true }
embassy-time = { version = "0.5.*", optional = true }
rp2040-hal = { version = "0.12.0", optional = true }
rp235x-hal = { version = "0.4.0", optional = true }
rp2040-pac = { version = "0.6.0", optional = true }


[features]
default = []
rp2040 = ["dep:rp2040-hal", "dep:rp2040-pac", "embassy-rp/rp2040"]
rp235x = ["dep:rp235x-hal", "dep:rp235x-pac", "embassy-rp/rp235xa"]
esp = []
# To use Embassy Advantage
embassy = ["dep:embassy-time", "dep:embassy-executor"]
