[package]
name = "shrike-rs"
version = "0.1.0"
edition = "2024"


[dependencies]
embedded-hal = "1.0.*"
embedded-hal-async = "1.0.*"
embassy-executor = { version = "0.10.*", optional = true }
embassy-rp = { version = "0.10.*", optional = true }
embassy-time = { version = "0.5.*", optional = true }
rp2040-hal = { version = "0.12.0", optional = true }
rp235x-hal = { version = "0.4.0", optional = true }
rp2040-pac = { version = "0.6.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"


[features]
default = ["rp235x", "embassy"]
rp2040 = ["rp2040-hal/rt", "dep:rp2040-pac", "embassy-rp/rp2040"]
rp235x = ["rp235x-hal/rt", "embassy-rp/rp235xa", "embassy-rp/rt"]
esp = []
# To use Embassy Advantage
embassy = ["dep:embassy-time", "dep:embassy-executor"]
