[package]
name = "shrike-core"
version = "0.1.0"
edition = "2024"
description = "Core traits and universal SPI implementation for flashing FPGAs from microcontrollers."
license = "MIT"
keywords = ["embedded", "fpga", "spi", "flashing", "no_std"]
repository = "https://github.com/CosmoBunny/shrike-rs"

[dependencies]
embedded-hal = "1.0.*"
embedded-hal-async = "1.0.*"
embassy-time = { version = "0.5.*", optional = true }

[features]
embassy = ["dep:embassy-time"]
