[package]
name = "shrike-rp"
version = "0.1.0"
edition = "2024"
description = "RP2040/RP235x-specific implementation for flashing FPGAs using shrike-core."
license = "MIT"
keywords = ["embedded", "fpga", "rp2040", "rp235x", "no_std"]
repository = "https://github.com/CosmoBunny/shrike-rs"

[dependencies]
shrike-core = { version = "0.1.0", path = "../shrike-core" }
embedded-hal = "1.0.*"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
fugit = "0.3.7"
embassy-executor = { version = "0.10.*", optional = true }
embassy-rp = { version = "0.10.*", optional = true }
rp2040-hal = { version = "0.12.0", optional = true }
rp235x-hal = { version = "0.4.0", optional = true }
rp2040-pac = { version = "0.6.0", optional = true }

[features]
default = ["rp2040"]
rp2040 = ["rp2040-hal/rt", "dep:rp2040-pac", "embassy-rp/rp2040"]
rp235x = ["rp235x-hal/rt", "embassy-rp/rp235xa", "embassy-rp/rt"]
embassy = ["dep:embassy-executor", "shrike-core/embassy"]
